crates/ac-qu-ai-nt-core/0.0.2/CHANGELOG.md
# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.0.2](https://github.com/babichjacob/ac-qu-ai-nt/compare/ac-qu-ai-nt-core-v0.0.1...ac-qu-ai-nt-core-v0.0.2) - 2024-10-06

### Other

- release

## [0.0.1](https://github.com/babichjacob/ac-qu-ai-nt/releases/tag/ac-qu-ai-nt-core-v0.0.1) - 2024-10-06

### Added

- initialize `core`, `gui-eframe`, and `tui-ratatui` crates and use them in the `multibinary`

### Other

- add package `description`s so that they can actually be published
- release
- run cargo fmt

## [0.0.1](https://github.com/babichjacob/ac-qu-ai-nt/releases/tag/ac-qu-ai-nt-core-v0.0.1) - 2024-10-06

### Added

- initialize `core`, `gui-eframe`, and `tui-ratatui` crates and use them in the `multibinary`

### Other

- release
- run cargo fmt

## [0.0.1](https://github.com/babichjacob/ac-qu-ai-nt/releases/tag/ac-qu-ai-nt-core-v0.0.1) - 2024-10-06

### Added

- initialize `core`, `gui-eframe`, and `tui-ratatui` crates and use them in the `multibinary`

### Other

- run cargo fmt
